@@ -1,3 +1,9 @@
+2012-12-14  Charlie Zender  <zender@uci.edu>
+
+	* Document ncrename changes
+
+	* ncrename -a global@old_att,new_att works for global attributes
+
 2012-12-12  Charlie Zender  <zender@uci.edu>
 
 	* ncrename -a @old_att,new_att works for global attributes
